--- a/src/app/shop/cart/cart-item/cart-item.component.scss
+++ b/src/app/shop/cart/cart-item/cart-item.component.scss
@@ -30,6 +30,11 @@
         text-align: right;
         width: 25%;
       }
+      .price-wrapper {
+        .discount {
+          margin-left: 5px;
+        }
+      }
     }
   }
 }
