--- a/src/app/shop/cart/cart.component.html
+++ b/src/app/shop/cart/cart.component.html
@@ -1,4 +1,5 @@
 <div class="cart-container">
   <app-cart-item *ngFor="let cartItem of cart" [cartItem]="cartItem"></app-cart-item>
+  <h3>Total amount: ${{totalAmount}}</h3>
 </div>
 
