--- a/src/app/shop/cart/cart-item/cart-item.component.scss
+++ b/src/app/shop/cart/cart-item/cart-item.component.scss
@@ -4,10 +4,10 @@
   padding-bottom: 10px;
   margin-bottom: 10px;
   width: 100%;
+  position: relative;
   .cart-img {
     width: 80px;
     height: 100px;
-    margin-right: 20px;
   }
   .title {
     font-weight: 600;
@@ -20,13 +20,15 @@
       &:nth-child(1) {
         text-align: left;
         width: 50%;
+        margin-left: 20px;
       }
       &:nth-child(2) {
         text-align: center;
         width: 25%;
+        display: flex;
+        justify-content: center;
       }
       &:nth-child(3) {
-        margin-right: 20px;
         text-align: right;
         width: 25%;
       }
@@ -35,6 +37,66 @@
           margin-left: 5px;
         }
       }
+      .quantity {
+        margin: 0 7px;
+        font-weight: 500;
+      }
+      button {
+        width: 20px;
+        height: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        background: linear-gradient(135deg, #71767c, #fff);
+        box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+        border: none;
+        cursor: pointer;
+        visibility: hidden;
+        opacity: 0;
+        transition: opacity 0.5s ease;
+        &:hover {
+          background: #e23f50;
+          .icon path {
+            fill: white;
+          }
+        }
+        .icon {
+          fill:#030104;
+          width: 12px;
+          height: 12px;
+        }
+      }
+      .active {
+         visibility: visible;
+         opacity: 1;
+      }
+    }
+    .delete-block {
+      position: absolute;
+      bottom: 10px;
+      right: 5px;
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      visibility: hidden;
+      opacity: 0;
+      transition: opacity 0.5s ease;
+      .waste-icon {
+        width: 20px;
+        height: 20px;
+      }
+      .delete-text {
+        font-size: 14px;
+        color: #e23f50;;
+        line-height: 14px;
+        margin-left: 3px;
+        margin-top: 2px;
+      }
+    }
+    .active {
+      visibility: visible;
+      opacity: 1;
     }
   }
 }
