--- a/src/app/shop/cart/cart-item/cart-item.component.html
+++ b/src/app/shop/cart/cart-item/cart-item.component.html
@@ -7,7 +7,7 @@
       <div><span class="title">Size:</span> {{cartItem.size}}</div>
     </div>
     <div class="block">
-      <button #button1>
+      <button #button1 (click)="increaseProductsQuantity()">
         <svg class="icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
            viewBox="0 0 58 58" style="enable-background:new 0 0 58 58;" xml:space="preserve">
           <path d="M55,24H34V3c0-2.762-2.238-3-5-3s-5,0.238-5,3v21H3c-2.762,0-3,2.238-3,5s0.238,5,3,5h21v21
@@ -25,8 +25,7 @@
     </div>
     <div class="block">
       <div class="price-wrapper">
-        <span [ngStyle]="{textDecoration : cartItem.discount ? 'line-through' : none, color : cartItem.discount ? 'grey' : 'black'}">${{cartItem.price}}</span>
-        <span class="discount" *ngIf="cartItem.discount">${{cartItem.discount}}</span>
+        <span>${{cartItem.amount}}</span>
       </div>
     </div>
     <div class="delete-block" #deleteBlock>
