--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -23,7 +23,7 @@
     </label>
   </div>
   <div class="save-wrapper">
-    <button class="my-button" (click)="onSave()" [disabled]="!isChanged && !newPassword">Save changes</button>
+    <button class="my-button" (click)="onSave()" [disabled]="!isChanged && !newPassword"><span>Save changes</span></button>
   </div>
 </div>
 
