--- a/src/app/shop/cart/cart.component.scss
+++ b/src/app/shop/cart/cart.component.scss
@@ -2,6 +2,30 @@
   padding: 60px 0 30px;
   width: 70%;
   margin: 0 auto;
+  .no-cart-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: 'goudy_old_stylebold';
+    .cart-icon {
+      width: 100px;
+      height: 100px;
+      margin-top: 30px;
+    }
+    .title {
+      font-size: 28px;
+      font-weight: 600;
+      margin: 20px 0;
+    }
+    .text {
+      font-size: 20px;
+      a {
+        color: #e23f50;
+        text-decoration: none;
+      }
+    }
+  }
   .cart-header {
     display: flex;
     border-bottom: 3px solid black;
@@ -27,4 +51,27 @@
   .button-wrapper {
     text-align: center;
   }
+  .loading-process {
+    background: rgba(0,0,0,.5);
+    width:100%;
+    height:100%;
+    position:fixed;
+    top:0;
+    left:0;
+    z-index:999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .spinner {
+      div {
+        background-color: white;
+      }
+    }
+  }
 }
+.loading-animation {
+  position: absolute;
+  top: 70px;
+  left: 50%;
+}
+
