--- a/src/app/shop/products/product-details/product-details.component.scss
+++ b/src/app/shop/products/product-details/product-details.component.scss
@@ -64,17 +64,13 @@
     .cta {
       display: flex;
       margin-top: 20px;
-      border: 2px solid black;
-      color: #000;
-      z-index:0;
       position: relative;
-      background: linear-gradient(135deg, #71767c, #fff);
-      box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
       .icon {
         width: 30px;
         height: 20px;
         margin-left: 7px;
         animation: zoom 1s linear infinite;
+        z-index: 3;
       }
     }
     .cart {
@@ -82,15 +78,20 @@
       height: 38px;
     }
     .loading-process {
-      background: rgba(0,0,0,.7);
-    }
-    .spinner {
-      position: absolute;
-      & div {
-        background: #ccc;
-        top: 0;
-        left: 0;
-        z-index: 1;
+      background: rgba(0,0,0,.5);
+      width:100%;
+      height:100%;
+      position:absolute;
+      top:0;
+      left:0;
+      z-index:999;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .spinner {
+        div {
+          background-color: white;
+        }
       }
     }
   }
@@ -122,5 +123,3 @@
 
 }
 
-@media screen and (max-width: 450px) {
-}
