--- a/src/styles.scss
+++ b/src/styles.scss
@@ -88,6 +88,30 @@ body {
   padding: 5px 10px;
   cursor: pointer;
   color: black;
+  transition: opacity .5s ease-out;
+  position: relative;
+  z-index: 1;
+  &:after {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    background-image: linear-gradient(135deg, #e23f50, #fff);
+    transition: opacity 0.5s ease-out;
+    z-index: 2;
+    opacity: 0;
+  }
+  &:hover:after {
+    opacity: 1;
+  }
+  span {
+    color: black;
+    z-index: 3;
+    position: relative;
+  }
 }
 
 button[disabled] {
