Implement deleting product from a cart and decreasing quantity of product in a cart.

--- a/src/app/shop/cart/cart-item/cart-item.component.scss
+++ b/src/app/shop/cart/cart-item/cart-item.component.scss
@@ -67,6 +67,9 @@
           height: 12px;
         }
       }
+      button[disabled] {
+        cursor: not-allowed;
+      }
       .active {
          visibility: visible;
          opacity: 1;
