--- a/src/app/shop/products/product-details/product-details.component.scss
+++ b/src/app/shop/products/product-details/product-details.component.scss
@@ -28,7 +28,7 @@
   .content-wrapper {
     width: 35%;
     margin: 0 2%;
-    & > div {
+     div {
       margin-bottom: 10px;
     }
     .brand {
