--- a/src/app/shop/cart/cart-item/cart-item.component.html
+++ b/src/app/shop/cart/cart-item/cart-item.component.html
@@ -15,7 +15,7 @@
         </svg>
       </button>
       <div class="quantity">{{cartItem.quantity}}</div>
-      <button  #button2>
+      <button  #button2 [disabled]="cartItem.quantity <= 1" (click)="decreaseProductsQuantity()">
         <svg class="icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
            viewBox="0 0 42 42" style="enable-background:new 0 0 42 42;" xml:space="preserve">
           <path d="M37.059,16H26H16H4.941C2.224,16,0,18.282,0,21s2.224,5,4.941,5H16h10h11.059C39.776,26,42,23.718,42,21
@@ -28,7 +28,7 @@
         <span>${{cartItem.amount}}</span>
       </div>
     </div>
-    <div class="delete-block" #deleteBlock>
+    <div class="delete-block" #deleteBlock (click)="deleteProductFromCart()">
       <img src="/assets/waste-bin.svg" alt="" class="waste-icon">
       <div class="delete-text">Delete</div>
     </div>
