--- a/src/app/shop/cart/cart.component.html
+++ b/src/app/shop/cart/cart.component.html
@@ -21,7 +21,7 @@
       <button class="my-button order-btn"><span>ORDER</span></button>
     </div>
   </ng-container>
-  <div class="loading-process" *ngIf="addToCartLoading">
+  <div class="loading-process" *ngIf="addToCartLoading || decreaseCartLoading">
     <div class="spinner">
       <div class="bounce1"></div>
       <div class="bounce2"></div>
