Make wishlist component, actions, effects and reducer.

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -44,7 +44,7 @@
         </a>
       </li>
        <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" routerLink="/shop/wishlist">
         	<div class="nav-icon-heart nav-icon"></div>
         </a>
       </li>
