--- a/src/app/shop/products/product/product.component.scss
+++ b/src/app/shop/products/product/product.component.scss
@@ -23,25 +23,29 @@
     display: flex;
     justify-content: center;
     align-items: center;
-  .icon {
-    display: inline-block;
-    height: 23px;
-    width: 23px;
-    margin: 0 7px;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: center;
-    cursor: pointer;
-  }
-  .wish-icon {
-    background-image: url('/assets/shop/heart.svg');
-  }
-  .eye-icon {
-    background-image: url('/assets/shop/eye.svg');
-  }
-  .bag-icon {
-    background-image: url('/assets/shop/bag.svg');
-  }
+    span {
+      height: 23px;
+      width: 23px;
+    }
+    .icon {
+      display: inline-block;
+      height: 23px;
+      width: 23px;
+      margin: 0 7px;
+      background-repeat: no-repeat;
+      background-size: 100%;
+      background-position: center;
+      cursor: pointer;
+    }
+    .wish-icon {
+      background-image: url('/assets/shop/heart.svg');
+    }
+    .eye-icon {
+      background-image: url('/assets/shop/eye.svg');
+    }
+    .bag-icon {
+      background-image: url('/assets/shop/bag.svg');
+    }
   }
   .brand {
     font-size: 24px;
