--- a/src/styles.scss
+++ b/src/styles.scss
@@ -118,7 +118,19 @@ button[disabled] {
   cursor: not-allowed;
 }
 
-/* Loading animations */
+/* Animations */
+
+@keyframes zoom {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
 
 .lds-ripple {
   display: inline-block;
