--- a/src/app/shop/cart/cart-item/cart-item.component.scss
+++ b/src/app/shop/cart/cart-item/cart-item.component.scss
@@ -52,7 +52,6 @@
         box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
         border: none;
         cursor: pointer;
-        visibility: hidden;
         opacity: 0;
         transition: opacity 0.5s ease;
         &:hover {
@@ -74,8 +73,8 @@
         cursor: not-allowed;
       }
       .active {
-         visibility: visible;
-         opacity: 1;
+        opacity: 1;
+        transition: opacity 0.7s ease-out;
       }
     }
     .delete-block {
@@ -85,9 +84,8 @@
       display: flex;
       align-items: center;
       cursor: pointer;
-      visibility: hidden;
       opacity: 0;
-      transition: opacity 0.5s ease;
+      transition: opacity 0.7s ease-out;
       .waste-icon {
         width: 20px;
         height: 20px;
@@ -101,8 +99,8 @@
       }
     }
     .active {
-      visibility: visible;
       opacity: 1;
+      transition: opacity 0.7s ease-out;
     }
   }
 }
