--- a/src/app/shop/products/product-details/product-details.component.html
+++ b/src/app/shop/products/product-details/product-details.component.html
@@ -52,7 +52,7 @@
     </button>
     <button class="my-button cta heart">
       <span>Add to the Wish List</span>
-      <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" fill="red" x="0px" y="0px"
+      <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" fill="#e23f50" x="0px" y="0px"
          width="20px" height="20px" viewBox="0 0 510 510" style="enable-background:new 0 0 510 510;" xml:space="preserve" class="icon">
         <g id="favorite">
           <path d="M255,489.6l-35.7-35.7C86.7,336.6,0,257.55,0,160.65C0,81.6,61.2,20.4,140.25,20.4c43.35,0,86.7,20.4,114.75,53.55
