--- a/src/app/shop/products/products.component.html
+++ b/src/app/shop/products/products.component.html
@@ -20,7 +20,11 @@
     <div class="lds-ripple" *ngIf="initLoading"><div></div><div></div></div>
     <ng-container *ngIf="products">
       <div class="content">
-        <app-product *ngFor="let product of products" [product]="product" [attr.id]="'item' + product.id"></app-product>
+        <app-product *ngFor="let product of products"
+                     [product]="product"
+                     [attr.id]="'item' + product.id"
+                     [wishlist]="wishlist"
+        [addedToWishlistId]="addedToWishlistId"></app-product>
       </div>
       <div class="button-wrapper" *ngIf="products.length >= 3 && products.length < totalAmount && (!initLoading || !loading)">
         <button (click)="loadMore()" class="my-button load">
