--- a/src/app/shop/wishlist/wishlist-item/wishlist-item.component.scss
+++ b/src/app/shop/wishlist/wishlist-item/wishlist-item.component.scss
@@ -6,8 +6,8 @@
   width: 100%;
   position: relative;
   .img-box {
-    width: 100px;
-    height: 120px;
+    width: 110px;
+    height: 130px;
     cursor: pointer;
     position: relative;
     .wishlist-img {
@@ -52,7 +52,6 @@
           display: flex;
           align-items: center;
           cursor: pointer;
-          visibility: hidden;
           opacity: 0;
           transition: opacity 0.5s ease;
           .icon {
@@ -66,6 +65,16 @@
             margin-top: 4px;
           }
         }
+        .ng-select.custom {
+          width: 140px;
+        }
+        .ng-select.custom .ng-select-container  {
+          width: 140px;
+        }
+        /deep/ .ng-select .ng-select-container {
+          height: 33px;
+          min-height:27px;
+        }
         .delete-block {
           margin-left: 15px;
           .delete-text {
@@ -73,8 +82,8 @@
           }
         }
         .active {
-          visibility: visible;
           opacity: 1;
+          transition: opacity 0.7s ease-out;
         }
       }
     }
