--- a/src/app/shop/wishlist/wishlist-item/wishlist-item.component.html
+++ b/src/app/shop/wishlist/wishlist-item/wishlist-item.component.html
@@ -1,7 +1,7 @@
-<div class="wishlist-item-container" hover activeClass="active" [el]="[addBlock, deleteBlock, detailsBlock]">
+<div class="wishlist-item-container" hover activeClass="active" [el]="[addBlock, heartIcon, deleteBlock, detailsBlock]">
   <div class="img-box" (click)="openProductDetails()">
     <img [src]="imagePath" alt="" class="wishlist-img">
-    <img src="/assets/red-heart.svg" alt="" class="heart-icon">
+    <img src="/assets/red-heart.svg" alt="" class="heart-icon" #heartIcon>
   </div>
   <div class="content-box">
     <div class="block">
@@ -18,11 +18,11 @@
         <div class="text add-text">Watch Details</div>
       </div>
       <div class="additional-block" #addBlock (click)="addProductToCart()">
-        <ng-container *ngIf="!addToCartWasClicked">
+        <ng-container *ngIf="!addToCartWasClicked && !addToCartLoading">
           <img src="/assets/shop/bag.svg" alt="" class="icon">
           <div class="text">Add to Cart</div>
         </ng-container>
-        <ng-select *ngIf="addToCartWasClicked" [items]="sizes"
+        <ng-select *ngIf="addToCartWasClicked && !addToCartLoading" [items]="sizes"
                    [(ngModel)]="selectedSize" placeholder="Choose a size" class="custom">
         </ng-select>
       </div>
