--- a/src/app/shop/products/product/product.component.html
+++ b/src/app/shop/products/product/product.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="manage-panel">
     <span class="icon eye-icon" (click)="openProductDetails()"></span>
-    <span (click)="addProductToWishlist()" [ngClass]="{'highlight': checkIfProductInWishlist()}">
+    <span class="heart-icon-wrapper" (click)="handleWishlist(product.id)" [ngClass]="{'highlight': checkIfProductInWishlist(product.id)}">
       <svg class="icon heart-icon" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
      width="510px" height="510px" viewBox="0 0 510 510" style="enable-background:new 0 0 510 510;" xml:space="preserve">
         <g id="favorite">
