--- a/src/app/shop/products/products.component.html
+++ b/src/app/shop/products/products.component.html
@@ -23,8 +23,8 @@
         <app-product *ngFor="let product of products"
                      [product]="product"
                      [attr.id]="'item' + product.id"
-                     [wishlist]="wishlist"
-        [addedToWishlistId]="addedToWishlistId"></app-product>
+                     [wishlist]="wishlist">
+        </app-product>
       </div>
       <div class="button-wrapper" *ngIf="products.length >= 3 && products.length < totalAmount && (!initLoading || !loading)">
         <button (click)="loadMore()" class="my-button load">
