--- a/src/app/shop/wishlist/wishlist-item/wishlist-item.component.scss
+++ b/src/app/shop/wishlist/wishlist-item/wishlist-item.component.scss
@@ -20,7 +20,9 @@
       position: absolute;
       top: 5px;
       right: 5px;
-      animation: zoom 1s linear infinite;
+      &.active {
+        animation: zoom 1s linear infinite;
+      }
     }
   }
   .title {
@@ -54,6 +56,7 @@
           cursor: pointer;
           opacity: 0;
           transition: opacity 0.5s ease;
+          position: relative;
           .icon {
             width: 20px;
             height: 20px;
