--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import "~@ng-select/ng-select/themes/default.theme.css";
+@import './variables.scss';
 
 @font-face {
   font-family: 'goudy_old_stylebold';
@@ -75,7 +76,7 @@ body {
 }
 .inputfile:focus + label,
 .inputfile + label:hover {
-  background-color: rgb(77, 144, 254);
+  background-color: $red_color;
   box-shadow: 0 0 3px 2px rgba(0, 0, 0, .7);
 }
 
