Change routing and implement removing and adding product to wishlist from products details.

--- a/src/app/shop/products/products.component.html
+++ b/src/app/shop/products/products.component.html
@@ -3,7 +3,7 @@
   <div class="filters">
     <h5 class="filter-title">SHOP BY</h5>
     <ul>
-      <li>Dresses & Coats</li>
+      <li>Dresses</li>
       <li>Tops</li>
       <li>Bottoms</li>
       <li>Shoes</li>
@@ -11,8 +11,6 @@
     </ul>
     <h5 class="filter-title">REFINE</h5>
     <ul>
-      <li>Size</li>
-      <li>Colour</li>
       <li>Price</li>
     </ul>
   </div>
