--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -22,13 +22,7 @@
         <a class="nav-link" routerLink="/users" *ngIf="isAuthorized()" routerLinkActive="active">USERS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link"  routerLink="/shop" href="#">SHOP</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">DISCOVER</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">QUIZ</a>
+        <a class="nav-link"  routerLink="/shop/products" href="#">SHOP</a>
       </li>
     </ul>
      <ul class="navbar-nav">
