--- a/src/app/shop/products/product-details/product-details.component.html
+++ b/src/app/shop/products/product-details/product-details.component.html
@@ -51,9 +51,12 @@
       </div>
     </button>
     <button class="my-button cta heart">
-      <span>Add to the Wish List</span>
-      <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" fill="#e23f50" x="0px" y="0px"
-         width="20px" height="20px" viewBox="0 0 510 510" style="enable-background:new 0 0 510 510;" xml:space="preserve" class="icon">
+      <span *ngIf="!productIsInWishlist" (click)="addProductToWishlist(product.id)">Add to the Wish List</span>
+      <span *ngIf="productIsInWishlist" (click)="RemoveProductFromWishlist(product.id)">Product was Added</span>
+      <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+         width="20px" height="20px" viewBox="0 0 510 510"
+           style="enable-background:new 0 0 510 510;" xml:space="preserve" class="icon"
+            [ngStyle]="{'fill': productIsInWishlist ? '#e23f50' : 'black'}">
         <g id="favorite">
           <path d="M255,489.6l-35.7-35.7C86.7,336.6,0,257.55,0,160.65C0,81.6,61.2,20.4,140.25,20.4c43.35,0,86.7,20.4,114.75,53.55
             C283.05,40.8,326.4,20.4,369.75,20.4C448.8,20.4,510,81.6,510,160.65c0,96.9-86.7,175.95-219.3,293.25L255,489.6z"/>
