Implement fetching products by category.

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -22,7 +22,7 @@
         <a class="nav-link" routerLink="/users" *ngIf="isAuthorized()" routerLinkActive="active">USERS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link"  routerLink="/shop/products" href="#">SHOP</a>
+        <a class="nav-link" routerLink="/shop/products">SHOP</a>
       </li>
     </ul>
      <ul class="navbar-nav">
