--- a/src/app/shop/products/edit-product/edit-product.component.html
+++ b/src/app/shop/products/edit-product/edit-product.component.html
@@ -3,45 +3,25 @@
     <label for="title">
       <strong>Brand</strong>
     </label>
-    <input
-      type="text"
-      class="form-control"
-      name="title"
-      id="title"
-      [(ngModel)]="brand">
+    <input type="text" class="form-control" name="brand" id="title" [(ngModel)]="brand">
   </div>
   <div class="form-group">
     <label for="price">
       <strong>Price</strong>
     </label>
-    <input
-      type="number"
-      class="form-control"
-      name="title"
-      id="price"
-      [(ngModel)]="price">
+    <input type="number" class="form-control" name="price" id="price" [(ngModel)]="price">
   </div>
   <div class="form-group">
     <label for="discount">
       <strong>With Discount</strong>
     </label>
-    <input
-      type="number"
-      class="form-control"
-      name="title"
-      id="discount"
-      [(ngModel)]="discount">
+    <input type="number" class="form-control" name="discount" id="discount" [(ngModel)]="discount">
   </div>
   <div class="form-group">
     <label for="material">
       <strong>Material</strong>
     </label>
-    <input
-      type="text"
-      class="form-control"
-      name="title"
-      id="material"
-      [(ngModel)]="material">
+    <input type="text" class="form-control" name="material" id="material" [(ngModel)]="material">
   </div>
   <div class="form-group">
     <strong class="text">Description</strong>
