--- a/src/app/shop/wishlist/wishlist.component.html
+++ b/src/app/shop/wishlist/wishlist.component.html
@@ -4,7 +4,7 @@
     <img src="/assets/bag.svg" alt="" class="wishlist-icon">
     <div class="title">Wishlist is empty.</div>
     <div class="text">Looks like you have no items in your wishlist.</div>
-    <div class="text">Click <a routerLink="/shop">here</a> to continue shopping.</div>
+    <div class="text">Click <a routerLink="/shop/products">here</a> to continue shopping.</div>
   </div>
   <ng-container *ngIf="wishlist.length">
     <header class="wishlist-header">
