--- a/src/app/blog/posts/post-details/post-details.component.scss
+++ b/src/app/blog/posts/post-details/post-details.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../variables.scss';
+
 /deep/ .post-details-modal.modal-dialog {
   top: 70px;
   max-width: 1000px;
@@ -99,13 +101,20 @@
     color: #858fa0;
   }
 }
+.view {
+  color: $grey_color;
+  font-family: 'goudy_old_stylebold';
+  margin: 10px auto 5px;
+  font-size: 18px;
+  line-height: 18px;
+}
 .separator {
   background-image: url('/assets/newAssets/picture-arrow-down.png');
   background-repeat: no-repeat;
   background-size: 100% 100%;
   height: 30px;
   width: 110px;
-  margin: 20px auto;
+  margin: 0 auto 10px;
   cursor: pointer;
 }
 .comments-wrapper {
