--- a/src/app/shop/cart/cart-item/cart-item.component.scss
+++ b/src/app/shop/cart/cart-item/cart-item.component.scss
@@ -8,6 +8,8 @@
   .cart-img {
     width: 80px;
     height: 100px;
+    object-fit: cover;
+    cursor: pointer;
   }
   .title {
     font-weight: 600;
