--- a/src/app/shop/products/edit-product/edit-product.component.html
+++ b/src/app/shop/products/edit-product/edit-product.component.html
@@ -3,7 +3,8 @@
     <label for="title">
       <strong>Brand</strong>
     </label>
-    <input type="text" class="form-control" name="brand" id="title" [(ngModel)]="brand">
+    <input type="text" class="form-control" name="brand" id="title" [(ngModel)]="brand" [maxlength]="subjectMaxLength">
+    <div class="counter-validation"><strong>{{ subjectSignsLeft() }}</strong> signs left</div>
   </div>
   <div class="form-group">
     <label for="price">
@@ -44,10 +45,11 @@
           [ngClass]="{highlight: isHighlight}">
           <span>Click or drop your files here</span>
           <img src="/assets/cloud-download-interface-symbol.svg" alt="" class="icon-cloud-download">
-          <span class="warning" *ngIf="warning">Download images with extension jpeg, jpg or png</span>
+          <span class="warning" *ngIf="warning">{{warning}}</span>
       </div>
       <input name="file" type="file" class="inputfile" multiple="multiple" (change)="onUpload($event)">
     </label>
+    <div class="img-valid">You can upload at most <strong>12</strong> images.</div>
     <div class="wrapper-file-list" *ngIf="files.length">
       <div *ngFor="let file of files; let key = index" class="file-list" (click)="makeMainImg(key)">
         <img *ngIf="imageUrls.length" [src]="imageUrls[file.id]" [ngClass]="{'highlight-main-img': key == selectedImgKey}"/>
