--- a/src/app/shop/products/product-details/product-details.component.html
+++ b/src/app/shop/products/product-details/product-details.component.html
@@ -52,7 +52,7 @@
     </button>
     <button class="my-button cta heart">
       <span *ngIf="!productIsInWishlist" (click)="addProductToWishlist(product.id)">Add to the Wish List</span>
-      <span *ngIf="productIsInWishlist" (click)="RemoveProductFromWishlist(product.id)">Product was Added</span>
+      <span *ngIf="productIsInWishlist" (click)="RemoveProductFromWishlist(product.id)">Added to the Wish List</span>
       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
          width="20px" height="20px" viewBox="0 0 510 510"
            style="enable-background:new 0 0 510 510;" xml:space="preserve" class="icon"
