--- a/src/app/shop/products/product/product.component.scss
+++ b/src/app/shop/products/product/product.component.scss
@@ -57,12 +57,13 @@
     }
   }
   .brand {
-    font-size: 24px;
+    font-size: 22px;
     margin-top: 10px;
     font-family: 'goudy_old_stylebold';
   }
   .price-wrapper {
     display: flex;
+    margin-bottom: 5px;
     .price {
       font-size: 17px;
       margin: 0 3px;
