--- a/src/app/shop/wishlist/wishlist-item/wishlist-item.component.scss
+++ b/src/app/shop/wishlist/wishlist-item/wishlist-item.component.scss
@@ -13,6 +13,7 @@
     .wishlist-img {
       width: 100%;
       height: 100%;
+      object-fit: cover;
     }
     .heart-icon {
       width: 20px;
