Enhance sale component.

--- a/src/app/UI/clock/clock.component.html
+++ b/src/app/UI/clock/clock.component.html
@@ -1,3 +1,7 @@
-<p>
-  clock works!
-</p>
+<div class="clock-block">
+  <span>{{hours}}</span>
+  <span>:</span>
+  <span>{{minutes}}</span>
+  <span>:</span>
+  <span>{{seconds}}</span>
+</div>
