--- a/src/app/UI/sale/sale.component.html
+++ b/src/app/UI/sale/sale.component.html
@@ -1,3 +1,5 @@
 <div class="sale-container">
-
+  <span class="first-word">LEFT </span>
+  <app-clock></app-clock>
+  <span class="last-word">— 90% SALE</span>
 </div>
